# artheia

./: .gitignore  README.md  pyproject.toml  run_mcp.sh
.github/workflows/: publish.yml
artheia/: __init__.py  cli.py
artheia/adapters/: mcp_server.py
artheia/armanifest/: README.md  __init__.py  application.py  execution.py  layer.py  loader.py  machine.py  platform.py  rig.py  service.py  supervisor.py  transform.py
artheia/gen_server/: __init__.py
artheia/gen_server/probe/: __init__.py  codec.py  context.py  node.py  pg.py  transport.py  wire.py
artheia/generators/: __init__.py  _art_clusters.py  app_composition.py  app_dispatch.py  autosar_system.py  can_to_nanopb.py  codec_dispatch.py  config_defaults.py  config_schema.py  cpp_app.py  dist_manifest.py  etcd_schema.py  fc_app.py  fibex_to_nanopb.py  gateway_netgraph.py  gw_types.py  host_netgraph.py  lib_app.py  manifest_gen.py  manifest_proto.py  migration_diff.py  netgraph.py  netgraph_partition.py  params_config.py  platform_protos.py  proto.py  proto_package.py  psp_netgraph.py  psp_registry.py  rig.py  rig_combine.py  routing.py  signal_filter.py  signal_filter_csv.py  statem.py  stubs.py  trace_decoder_subset.py  transform_codegen.py
artheia/generators/templates/: CMakeLists.j2  can_CMakeLists.j2  can_decode.c.j2  can_dispatch_table.c.j2  can_dispatch_table.h.j2  can_encode.c.j2  can_ns_wrapper.h.j2  can_proto.j2  dispatch_table.c.j2  dispatch_table.h.j2  enum.proto.j2  fr_decode.c.j2  hercules_filter.h.j2  hercules_filter_json.j2  message.proto.j2  ns_wrapper.h.j2  pdu_encode.c.j2  proto.j2  psp_can_registry.c.j2  psp_can_registry.h.j2  statem_base.hh.j2  stub.cpp.h.j2  stub.py.j2
artheia/generators/templates/cpp_app/: App.cc.j2  App.hh.j2  CMakeLists.txt.j2  Inputs.hh.j2  handlers.cc.j2  main.cc.j2
artheia/generators/templates/fc_app/: BUILD.impl.bazel.j2  BUILD.lib.bazel.j2  BUILD.main.bazel.j2  Codecs.hh.j2  Daemon.hh.j2  Daemon.prebuilt.hh.j2  Daemon.runnable.hh.j2  Daemon.statem.hh.j2  Log.hh.j2  Netgraph.hh.j2  RdsStreams.hh.j2  executor.py.j2  handlers.cc.j2  handlers.prebuilt.cc.j2  handlers.runnable.cc.j2  handlers.statem.cc.j2  main.cc.j2  main.example.cc.j2  main.statem.cc.j2  manifest.py.j2  state.hh.j2
artheia/grammar/: __init__.py  artheia.tx
artheia/importers/: __init__.py  _asam_cmp_parser.py  arxml_to_signals.py  autosar.py  fusee.py
artheia/lsp/: __init__.py  server.py
artheia/manifest/: README.md  __init__.py  algebra.py  application.py  applicative.py  cluster.py  clusters.py  core.py  datatypes.py  deployment.py  execution.py  layer.py  loader.py  machine.py  platform.py  rig.py  serialize.py  service.py  statem.py  stubs.py  supervisor.py  transform.py  utils.py
artheia/model/: __init__.py  bus_catalog.py  flatten.py  inherit.py  loader.py  scope.py  validators.py
artheia/observer/: __init__.py  log_observer.py  logcat_filter.py  observer.py
docs/: MANUAL.md
examples/: demo.art  walkthrough.sh
examples/arxml/: synthetic_flexray.arxml
tests/: test_algebra.py  test_audit_manifest.py  test_autosar.py  test_bus_catalog.py  test_config_defaults.py  test_dist_manifest.py  test_fusee.py  test_gen_rig.py  test_generators.py  test_grammar.py  test_importer.py  test_lsp.py  test_lsp_protocol.py  test_migration_diff.py  test_netgraph_recursive.py  test_node_inherit.py  test_node_reporting.py  test_node_trace_ctl.py  test_probe_transport.py  test_statem.py  test_supervisor_nodes_metadata.py  test_supervisor_slice.py  test_trace_decoder_subset.py  test_transform.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: artheia.tmLanguage.json
