[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artheia"
version = "0.0.1"
description = "Host-side DSL for Adaptive-AUTOSAR-style nodes that talk to Classical AUTOSAR via the Theia CAN/FR gateway. Inspired by ARText."
# README moved to workspace docs/artheia/README.md (out-of-tree of this
# subrepo). The package's pip-visible description is the line above.
requires-python = ">=3.10"
authors = [{ name = "Artheia" }]
license = { text = "Apache-2.0" }
dependencies = [
    "textX>=4.0",
    "Jinja2>=3.1",
    "click>=8.1",
    "PyYAML>=6.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-snapshot>=0.9",
]
lsp = [
    "pygls>=1.3",
]

[project.scripts]
artheia = "artheia.cli:main"
artheia-lsp = "artheia.lsp.server:main"
artheia-mcp = "artheia.adapters.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["artheia*"]

[tool.setuptools.package-data]
artheia = ["grammar/*.tx", "generators/templates/*.j2", "generators/templates/**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
