[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artheia"
version = "0.2.0"
description = "Host-side DSL for Adaptive-AUTOSAR-style nodes that talk to Classical AUTOSAR via the Theia CAN/FR gateway. Inspired by ARText."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Theia" }]
license = { text = "Apache-2.0" }
keywords = ["autosar", "dsl", "code-generation", "textx", "lsp", "tipc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "textX>=4.0",
    "Jinja2>=3.1",
    "click>=8.1",
    "PyYAML>=6.0",
    "fastmcp>=2.0",
]

[project.urls]
Homepage = "https://github.com/perotheia/artheia"
Repository = "https://github.com/perotheia/artheia"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-snapshot>=0.9",
]
lsp = [
    "pygls>=1.3",
    "lsprotocol",   # imported directly by lsp/server.py (pygls pulls it too)
]
# The gen_server PROBE (artheia.gen_server.probe) + the trace observer compile
# .proto → _pb2 at runtime via grpc_tools.protoc (compiler only — no gRPC) and
# decode with protobuf. Anyone building a probe-backed client (tdb, rtdb,
# rf-theia's supervisor adapter) needs this extra.
probe = [
    "grpcio-tools>=1.50",
    "protobuf>=4.21",
]

[project.scripts]
artheia = "artheia.cli:main"
artheia-lsp = "artheia.lsp.server:main"
artheia-mcp = "artheia.adapters.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["artheia*"]

[tool.setuptools.package-data]
artheia = ["grammar/*.tx", "generators/templates/*.j2", "generators/templates/**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
